исправления для первого ревью